# speech2text

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
speech2text/: __main__.py  config.py  demo.py  listener.py  settings.py  tick.py  transcriber.py
speech2text/audio_data/: __init__.py  audio_data.py  np_array.py  pcm_params.py  pydub_audioseg.py  wave_data.py
speech2text/experiments/: dub.py  helpers.py  pya.py  sandbox.ipynb  wave_io.py  workflow.ipynb  workflow_debugging.ipynb
speech2text/experiments/audio_data/: __init__.py  audio_data.py  np_arr.py  pd.py  wav.py
speech2text/experiments/libs/: dub.py  pya.py  rosa.py  wave_io.py
speech2text/listener/: __init__.py  listener.py  mic_listener.py  pcm_params.py  wav_listener.py
speech2text/transcriber/: __init__.py  noisereduce.py  refiner.py  samples.py  state.py  strategy.py  tools.py  transcriber.py  transformations.py  whisper.py  workflow.py
speech2text/transcriber/stage/: __init__.py  adjust.py  finalize.py  increment.py  refine.py  split.py  stage.py  transcribe.py
speech2text/transcriber/strategy/: __init__.py  realtime.py  strategy.py
speech2text/transcriber/transformations/: __init__.py  dummy.py  nr_refine.py  pydub_refine.py  transcribe.py
speech2text/utils/: __init__.py  sample_types.py  samples.py  tick.py
tests/unit/utils/: test_sample_types.py
